# AgentWatch

./: .coverage  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MASTERLIST_STATUS.md  PROGRESS.md  README.md  SECURITY.md  bandit-baseline.json  fly.toml  pyproject.toml  railway.toml  real_agent.py  skills-lock.json
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml
agentwatch/: __main__.py  tasks.py
agentwatch-landing/: .gitignore  AGENTS.md  package.json
agentwatch-landing/public/: contributors.json
agentwatch/adapters/: __init__.py  autogen.py  autogpt.py  claude_code.py  langchain.py  langgraph.py  openai_agents.py  openclaw.py  smolagents.py
agentwatch/alerting/: channels.py  engine.py
agentwatch/api/: auth.py  server.py
agentwatch/cli/: __init__.py  animator.py  demo.py  main.py  verify_env.py
agentwatch/core/: __init__.py  event_bus.py  http_forwarder.py  injection.py  loop_detector.py  models.py  policy_dsl.py  risk.py  safety.py  schema.py  watcher.py
agentwatch/cost/: anomaly.py  comparator.py  governance.py  predictor.py  roi.py  router.py  tracker.py
agentwatch/governance/: __init__.py  audit_log.py  causal.py  compliance_reporter.py  engine.py  eu_ai_act.py  gdpr.py  hipaa.py  iso42001.py  rbac.py  reports.py  residency.py
agentwatch/memory/: causal_graph.py  decay.py  engine.py  graph_query.py  nlquery.py  resolver.py  temporal_decay.py  visualization.py
agentwatch/monitoring/: metrics.py
agentwatch/orchestration/: consensus.py  dag.py  deadlock.py  engine.py  propagation.py  shapley.py  spawning.py
agentwatch/platform/: __init__.py  cloud.py  eval_builder.py  intelligence.py  prompts.py  sharing.py
agentwatch/plugins/: registry.py  sandbox.py
agentwatch/protocol/: __init__.py  badge.py  benchmark.py  mcp_server.py  schema_v1.py
agentwatch/reasoning/: adversarial.py  auditor.py  benchmark.py  calibration.py  dual_eval.py  explainer.py  fingerprint.py  hallucination.py  trust_score.py
core/: models.py
docs/: TROUBLESHOOTING.md
frontend/: accessibility_audit.md  railway.toml
frontend/lib/: api.ts  (+2 more)
helm/: Chart.yaml  values.yaml
scripts/: deploy_railway.sh  railway_deploy.py
tests/: conftest.py  test_alerting.py  test_api_auth.py  test_api_safety_check.py  test_channels.py  test_cli_api_key.py  test_cli_export.py  test_cli_prune.py  test_cli_status.py  test_compliance.py  test_core.py  test_cost.py  test_db_failure.py  test_graph_query.py  test_memory.py  test_monetization.py  test_monitoring.py  test_multiagent.py  test_observability.py  test_openai_agents_adapter.py  test_pipeline.py  test_platform.py  test_protocol.py  test_rbac_audit.py  test_reasoning.py  test_redaction.py  test_redteam.py  test_redteam_automation.py  test_rollback.py  test_run_cmd.py  test_safety.py  test_schema_validation.py  test_server.py  test_telemetry.py  test_verify_env.py  test_watcher.py  test_webhook_signing.py
(+44 files in other folders)
