[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentwatch-ai"
version = "0.1.0"
description = "The Reliability, Safety, and Observability Layer for AI Agents"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [
  { name = "AgentWatch Contributors" }
]
keywords = ["ai", "agents", "observability", "safety", "llm", "langchain", "claude"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: System :: Monitoring",
]

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "sqlalchemy[asyncio]>=2.0.35",
  "asyncpg>=0.29.0",
  "redis[hiredis]>=5.1.0",
  "celery[redis]>=5.4.0",
  "httpx>=0.27.0",
  "typer[all]>=0.12.0",
  "rich>=13.8.0",
  "python-multipart>=0.0.12",
]

[project.optional-dependencies]
embeddings = [
  "sentence-transformers>=3.1.0",
  "numpy>=1.26.0",
]
otel = [
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
  "opentelemetry-semantic-conventions>=0.48b0",
]
crypto = [
  "cryptography>=43.0.0",
]
langchain = [
  "langchain-core>=0.3.0",
]
autogpt = [
  # AutoGPT adapter works standalone; install AutoGPT separately
]
openclaw = [
  # OpenClaw adapter works standalone; install OpenClaw separately
]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.11.0",
  "ruff>=0.6.0",
  "httpx>=0.27.0",
]
all = [
  "agentwatch[embeddings,otel,crypto,langchain]",
]

[project.scripts]
agentwatch = "agentwatch.cli.main:main"

[project.urls]
Homepage = "https://github.com/sreerevanth/AgentWatch"
Repository = "https://github.com/sreerevanth/AgentWatch"
Issues = "https://github.com/sreerevanth/AgentWatch/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentwatch"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S"]
ignore = [
  "E501",   # line too long — handled by formatter
  "S101",   # assert — fine in tests
  "S104",   # hardcoded 0.0.0.0 — intentional in server code
  "S202",   # tarfile.extractall — needed for rollback restore
  "UP042",  # StrEnum — str+Enum is more explicit for Pydantic compat
]

[tool.ruff.lint.per-file-ignores]
# __init__.py re-exports: wildcard imports and implicit re-exports are intentional
"agentwatch/**/__init__.py" = ["F401", "F403"]
"agentwatch/*/__init__.py"  = ["F401", "F403"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
